--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "React Todo List App",
+  "name": "React Todo List App",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "./img/cmyk.png",
       "sizes": "192x192",
       "type": "image/png"
     }
