--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
 /config
 # testing
 /coverage
@@ -20,3 +18,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+/node_modules/
